--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "start-js": "react-scripts start",
     "start": "NODE_ENV=production npm-run-all -p watch-css start-js",
     "build-js": "react-scripts build && sw-precache --config=sw-precache-config.js",
-    "build": "npm-run-all build-css build-js",
+    "build": "npm-run-all build-css build-js && tar -czvf build.tgz build/",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
